--- a/css/main.css
+++ b/css/main.css
@@ -196,7 +196,7 @@ section {
   bottom: 0;
   left: 0;
   right: 0;
-  background: rgba(0,0,0,.6);
+  background: rgba(0,0,0,0.7);   /*    ssikdar   */
 }
 
 .carousel-fade .carousel-inner .active {
